# sovereign-ai-stack

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  aik.ctx  aik.priv  aik.pub  announcements.md  benchmark.py  docker-compose.yml  key.ctx  key.priv  key.pub  launch_demo_fail.txt  launch_demo_success.txt  primary.ctx  prometheus.yml  pyproject.toml  q3_targets.txt  quote.msg  rag_audit.jsonl  scratch_test.py  sovereign.db  sovereign.db-shm  sovereign.db-wal
.github/workflows/: ci.yml
benchmark/: airlock_maturity.json  calibration.py  calibration_results.json  dataset.json  harness.py  methodology.md  validate_airlock.py
demos/: bridge_lite.py  capture_results.py  gui.html  gui_server.py  hub.html  interactive.py  results.json  run_all.py  setup_data.py  verify_dashboard.py
demos/engineering/: demo.py  eng.db  eng.db-shm  policy.yaml
demos/finance/: demo.py  finance.db  finance.db-shm  finance.db-wal  policy.yaml
demos/healthcare/: clinic_a.db  clinic_a.db-shm  clinic_a.db-wal  clinic_b.db  demo.py  policy.yaml
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECT_CHECKLIST.md  BRIEFING_SUMMARY.md  FAQ.md  GOVERNANCE_MODEL.md  IMDA_Briefing_OnePager.md  IMDA_Briefing_Rehearsal_Guide.md  IMDA_Engagement.md  IMDA_Followup_Email.md  IMDA_Presentation.md  MIGRATION.md  PTV_Immune_Brain_Overview.md  PTV_Immune_Brain_Technical_Note.md  THREAT_MODEL.md  compliance-mapping.md  faq.md  strategic-adoption.md
docs/adr/: ADR-001-NLI-Verification.md  ADR-002-Forensic-Audit-Chain.md  ADR-003-Merkle-Audit-Aggregation.md  ADR-004-Remote-Attestation-Protocol.md  ADR-005-Hardware-Native-Attestation-Strategy.md
docs/architecture/: KNOWN_GAPS.md  MATURATION_GATES.md  (+1 more)
examples/: 01_basic_rag.py  02_verified_query.py  03_forensic_agent.py  README.md  demo_immune_brain.py
scratch/: fix_code_imports.py  fix_demos.py  fix_test_imports.py  fix_test_imports_v2.py  fix_test_pipeline_name.py  test_audit_chain.py  test_audit_gen.py  test_hard_gate.py  test_identity_sync.py  test_local_anchor.py
scripts/: fix_technical_strings.py  genesis_link.py  verify_attestation.py
sovereign_ai/: __init__.py  cli.py  pipeline.py
sovereign_ai_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stress_test_env/: sovereign.db
tests/: benchmark_performance.py  conftest.py  sovereign_stress_test.py  test_chunking.py  test_cli.py  test_consolidation.py  test_encryption.py  test_governance.py  test_hub.py  test_immune_brain.py  test_integration.py  test_main.py  test_monorepo_consolidation.py  test_performance.py  test_reranker.py  test_retriever.py  test_signed_policy.py  test_tamper_detection.py  test_v100_certification.py
whitepaper/: beyond-data-gravity-v1.0.md
zk-agent-attestation/: README.md
(+149 files in other folders)
